--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@ img {
 	width: 100%;
 }
 
+h3 {
+	font-size: 26px;
+	font-weight: 300;
+}
+
 h4 {
 	color: yellow;
 	font-size: 13px;
@@ -52,6 +57,17 @@ h4 {
 	text-transform: uppercase;
 }
 
+.btn-outline {
+	background: none;
+	color: #fff;
+	border: 2px solid #fff;
+}
+
+.btn-outline:hover {
+	color: #fff;
+	border-color: #ccc;
+}
+
 .btn-cta:hover {
 	opacity: 0.7;
 }
@@ -60,6 +76,14 @@ h4 {
 	font-size: 10px;
 	color: #ccc;
 	margin-top: 20px;
+}
+
+.sub-link {
+	display: block;
+	color: #ccc;
+	font-size: 12px;
+	margin-top: 5px;
+	text-decoration: underline;
 }
 
 /* HEADER */
@@ -114,10 +138,22 @@ h4 {
 .sub-header {
 	display: grid;
 	grid-template-columns: 2fr 4fr 2fr;
+	gap: 20px;
+	padding: 30px 40px;
+	background: linear-gradient(
+		318.68deg,
+		#0f495c 0%,
+		#0d3640 49.72%,
+		#08141f 100%
+	);
 }
 
-.sub-header img {
-	width: 40%;
+/*.sub-header img {*/
+/*	width: 40%;*/
+/*}*/
+
+.sub-header-img {
+	background: url('../img/img.jpg') repeat center center / cover;
 }
 /* SUB HEADER END */
 
