add sub header media query 768

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ h4 {
 	opacity: 0.7;
 }
 
+.login-btn {
+	z-index: 10;
+}
+
 .legal-text {
 	font-size: 10px;
 	color: #ccc;
@@ -148,6 +152,15 @@ h4 {
 	);
 }
 
+.sub-header > div:last-of-type {
+	justify-self: end;
+	align-self: end;
+}
+
+.sub-header > div:last-of-type .sub-link {
+	text-align: center;
+}
+
 /*.sub-header img {*/
 /*	width: 40%;*/
 /*}*/
@@ -167,5 +180,30 @@ h4 {
 		text-align: center;
 		padding: 0 20px;
 	}
+
+	.header .header-text-1 {
+		margin-bottom: 40px;
+	}
+
+	.header .header-text-2 {
+		display: none;
+	}
+
+	.sub-header-img {
+		height: 50px;
+		width: 100%;
+		margin: auto;
+	}
+
+	.sub-header {
+		grid-template-columns: 1fr;
+		text-align: center;
+		gap: 20px;
+	}
+
+	.sub-header > div:last-of-type {
+		justify-self: center;
+	}
+
 }
 /* MEDIA QUERIES END*/
