--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,31 @@ h4 {
 
 /* CATEGRIES END */
 
+/* LIVE */
+.live {
+	background: #151516;
+	padding: 40px;
+}
+
+.live-border {
+	border: 4px solid yellow;
+	border-radius: 15px;
+	padding: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
+.live a {
+	font-size: 18px;
+	margin-top: 20px;
+	text-decoration: underline;
+}
+
+/* LIVE END */
+
 /* MEDIA QUERIES */
 @media(max-width: 1100px){
 	.categories .covers {
@@ -318,6 +343,10 @@ h4 {
 
 	.categories .covers {
 		grid-template-columns: 1fr;
+	}
+
+	.live-border {
+		padding: 30px 10px;
 	}
 
 }
