--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,49 @@ h4 {
 
 /* LIVE SPORTS END */
 
+/* FOOTER */
+.footer {
+	background: #ebedf2;
+	color: #333;
+}
+
+.footer a {
+	color: #333;
+}
+
+.footer-container {
+	max-width: 1100px;
+	margin: auto;
+	padding: 40px;
+}
+
+.footer-lists {
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer-lists .list-head {
+	text-transform: uppercase;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+
+.divider {
+	width: 100%;
+	height: 3px;
+	border-top: 1px solid #ccc;
+	margin: 30px 0;
+}
+
+.social-icons img{
+	width: 25px;
+	height: 25px;
+	margin-right: 25px;
+	clip-path: circle(50% at 50% 50%);
+}
+
+/* FOOTER END */
+
 /* MEDIA QUERIES */
 @media(max-width: 1100px){
 	.categories .covers {
@@ -387,6 +430,10 @@ h4 {
 		left: 30px;
 		padding: 20px;
 		margin-top: 70px;
+	}
+
+	.footer-lists {
+		flex-direction: column;
 	}
 
 }
