--- a/css/style.css
+++ b/css/style.css
@@ -180,11 +180,11 @@ h4 {
 	gap: 20px;
 	padding: 30px 40px;
 	background: linear-gradient(
-		318.68deg,
-		#0f495c 0%,
-		#0d3640 49.72%,
-		#08141f 100%
-	);
+  		318.68deg,
+  		#e9ed00 0%,
+  		#644c16 49.72%,
+  		#08181F 100%
+  		);
 }
 
 .sub-header > div:last-of-type {
